--- a/inv/index.html
+++ b/inv/index.html
@@ -18,4 +18,4 @@ document.addEventListener('click', () => {
 
 </script>
 
-<style>@import url("/common.css");</style>
+<style>@import url("../common.css");</style>
