--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Fast.Tools</h1>
 
 <ul>
-    <li><a href="/inv/">Multiplicative Inverse</a></li>
+    <li><a href="inv/">Multiplicative Inverse</a></li>
 </ul>
