--- a/inv/index.html
+++ b/inv/index.html
@@ -13,7 +13,7 @@ function getResult(target, mod) {
     try {
         return target.modInv(mod).toString();
     } catch(err) {
-        return err.toString();
+        return `<span class=error>${err.toString()}</span>`;
     }
 }
 
