[feature] add title

--- a/inv/index.html
+++ b/inv/index.html
@@ -1,3 +1,7 @@
+<head>
+    <title>Fast.Tools</title>
+</head>
+
 <label for=target>Target: </label>
 <input id=target />
 <label for=target>Mod: </label>
