[feature] base64 & goback

--- a/calc/index.html
+++ b/calc/index.html
@@ -2,8 +2,12 @@
     <title>Calculate | Fast.Tools</title>
 </head>
 
+<div id=common></div>
+
 <h1>Calculate | Fast.Tools</h1>
 
 <ul>
     <li><a href="power.html">Fast Power</a></li>
 </ul>
+
+<script src="../js/page.js"></script>
