--- a/calc/power.html
+++ b/calc/power.html
@@ -2,6 +2,8 @@
     <title>Fast Power | Fast.Tools</title>
 </head>
 
+<div id=common></div>
+
 <label for=base>Base: </label>
 <input id=base />
 <label for=exp>Exponent: </label>
@@ -12,6 +14,7 @@
 <p class=result>Result: <span id=answer></span></p>
 
 <script src="https://cdn.jsdelivr.net/gh/peterolson/BigInteger.js@v1.6.40/BigInteger.min.js"></script>
+<script src="../js/page.js"></script>
 
 <script>
 
