--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
 <ul>
     <li><a href="inv/">Multiplicative Inverse</a></li>
     <li><a href="calc/">Calculate</a></li>
+    <li><a href="base64/">Base64</a></li>
 </ul>
