--- a/inv/index.html
+++ b/inv/index.html
@@ -2,6 +2,8 @@
     <title>Multiplicative Inverse | Fast.Tools</title>
 </head>
 
+<div id=common></div>
+
 <label for=target>Target: </label>
 <input id=target />
 <label for=mod>Modulo: </label>
@@ -10,9 +12,9 @@
 <p class=result>Result: <span id=answer></span></p>
 
 <script src="https://cdn.jsdelivr.net/gh/peterolson/BigInteger.js@v1.6.40/BigInteger.min.js"></script>
+<script src="../js/page.js"></script>
 
 <script>
-
 function getResult(target, mod) {
     try {
         return target.modInv(mod).toString();
@@ -27,7 +29,6 @@ document.getElementById('commit').addEventListener('click', () => {
     const res = getResult(target, mod)
     document.getElementById("answer").innerHTML = res;
 });
-
 </script>
 
 <style>@import url("../common.css");</style>
